src/objects/BurdenReference__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Field__c</fullName>
        <label>Home Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Rate_Sch_Id__c</fullName>
        <label>Ind Rate Sch Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUWorkTypeComposite__c</fullName>
        <formula>OU_ID__c + &apos;|&apos; +  Home_Field__c</formula>
        <label>OU/Work Type Composite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OU_ID__c</fullName>
        <label>OU ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OU_Name__c</fullName>
        <label>OU Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OU_Schedule__c</fullName>
        <label>OU Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Burden Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ind_Rate_Sch_Id__c</columns>
        <columns>Home_Field__c</columns>
        <columns>External_Id__c</columns>
        <columns>OU_ID__c</columns>
        <columns>OU_Name__c</columns>
        <columns>OU_Schedule__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Burden Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Burden References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>